# FimTum

./: .gitignore  LICENSE  pyproject.toml
fintum/: __init__.py  fintum.py
fintum/crawler/: crawler.py
fintum/crawler/sec/: secCrawler.py  urlSec.py
fintum/crawler/yahoo/: yahooCrawler.py
fintum/scrappers/: scrapper.py  urlBuilder.py
fintum/scrappers/sec/: secScrapper.py
fintum/scrappers/yahoo/: yahooScrapper.py
tests/: test_fintum.py  test_urlSec.py  test_yahooScrapper.py
