[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fintum"
version = "1.0.0"
description = "A Python package to retrieve Financial data from official sources."
authors = [{ name = "Óscar Rico Rodríguez" }]
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "requests"
]

[tool.setuptools.packages.find]
exclude = ["tests*", "*.ipynb", ".venv*", "dist*", ".pytest_cache*", "enunciado.html"]